Fix recipe pluralisation and fraction logic by adding flags to the unit arrays. Fix recipe card padding to prevent overlap with link icon and title. Update Recipe unit tests. Add fraction logic to Grocery List.

--- a/src/components/RecipeCard/RecipeCard.css
+++ b/src/components/RecipeCard/RecipeCard.css
@@ -17,7 +17,7 @@
 }
 
 .recipe-card-title {
-  margin: 0.3rem;
+  margin: 0.2rem 1.5rem;
 }
 
 .recipe-card-link {
